[package]
name = "news_data"
version = "0.1.0"
edition = "2021"

[dependencies]
serde_urlencoded = "0.7"  # or the latest version
reqwest = {version = "0.11.16", features = ["json"] }
twitter-v2 = "0.1.8"
tokio = {version = "1.42.0", features = ["full"]}       # Asynchronous Rust
thirtyfour = "0.35.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"                                      # For JSON handling if needed
dotenv = "0.15"                                         # Load environment variables from .env file