[package]
name = "news_data"
version = "0.1.0"
edition = "2021"

[dependencies]
config = "0.13"                                         # To parse configuration .toml files
futures = "0.3"
mongodb = "2.6"                                         # MongoDB driver
serde_urlencoded = "0.7"                                # or the latest version
reqwest = {version = "0.11.16", features = ["json"] }
twitter-v2 = "0.1.8"
tokio = {version = "1.42.0", features = ["full"]}       # Asynchronous Rust
thirtyfour = "0.35.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"                                      # For JSON handling if needed
dotenv = "0.15"                                         # Load environment variables from .env file
cached = "0.27.0"                                       # For caching
chrono = "0.4"                                          # For Time strings
rand = "0.3"                                            # For random generations
tracing = "0.1.41"                                      # For tracing logs
tracing-subscriber = "*"
futures-util = "0.3.31"
lru = "0.12.5"
thiserror = "2.0.11"
async-tungstenite = { version = "0.28.2", features = ["tokio-runtime", "tokio-native-tls"] }
time = "0.3"
tokio-native-tls = "0.3"
rustls = "0.20"
metrics = "0.24.1"
tungstenite = "0.24.0"